# forgecode

./: .gitignore  Cargo.toml  PROMPT.md  README.md  build.d  forge.schema.json  opencode.json
crates/forge_main/: Cargo.toml  build.rs
crates/forge_main/src/: banner.rs  cli.rs  conversation_selector.rs  editor.rs  error.rs  info.rs  input.rs  lib.rs  main.rs  model.rs  oauth_callback.rs  prompt.rs  sandbox.rs  snapshots.rs  state.rs  stream_renderer.rs  sync_display.rs  test_kit.rs  title_display.rs  tools_display.rs  tracker.rs  ui.rs  update.rs  version.rs
crates/forge_main/src/api/: api.rs  forge_api.rs  mod.rs
crates/forge_main/src/app/: agent.rs  agent_executor.rs  agent_provider_resolver.rs  app.rs  apply_tunable_parameters.rs  changed_files.rs  command_generator.rs  compact.rs  data_gen.rs  error.rs  file_tracking.rs  git_app.rs  infra.rs  init_conversation_metrics.rs  mcp_executor.rs  mod.rs  operation.rs  orch.rs  retry.rs  search_dedup.rs  services.rs  set_conversation_id.rs  system_prompt.rs  template_engine.rs  title_generator.rs  tool_executor.rs  tool_registry.rs  tool_resolver.rs  user_prompt.rs  utils.rs  workspace_status.rs
crates/forge_main/src/app/dto/: tools_overview.rs
crates/forge_main/src/app/fmt/: content.rs  fmt_input.rs  fmt_output.rs  todo_fmt.rs
crates/forge_main/src/app/hooks/: compaction.rs  doom_loop.rs  pending_todos.rs  title_generation.rs  tracing.rs
crates/forge_main/src/app/orch_spec/: orch_runner.rs  orch_setup.rs  orch_spec.rs  orch_system_spec.rs
crates/forge_main/src/app/snapshots/: forge_main__app__changed_files__tests__multiple_files_changed.snap  forge_main__app__command_generator__tests__generate_simple_command.snap  (+60 more)
crates/forge_main/src/completer/: command.rs  input_completer.rs
crates/forge_main/src/config/: compact.rs  config.rs  decimal.rs  error.rs  legacy.rs  mod.rs  percentage.rs  reader.rs  reasoning.rs  writer.rs
crates/forge_main/src/display/: markdown.rs
crates/forge_main/src/domain/: agent.rs  attachment.rs  chat_request.rs  chat_response.rs  context.rs  conversation.rs  conversation_html.rs  env.rs  error.rs  event.rs  file_operation.rs  hook.rs  http_config.rs  mcp_servers.rs  message.rs  message_pattern.rs  migration.rs  model_config.rs  node.rs  provider.rs  repo.rs  result_stream_ext.rs  session_metrics.rs  system_context.rs  tool_order.rs
crates/forge_main/src/forge_fs/: binary_detection.rs  error.rs  file_size.rs  is_binary.rs  meta.rs  mod.rs  read_range.rs  write.rs
crates/forge_main/src/forge_json_repair/: schema_coercion.rs
crates/forge_main/src/forge_markdown_stream/: code.rs  heading.rs  inline.rs  mod.rs  renderer.rs  theme.rs
crates/forge_main/src/fs/: read.rs
crates/forge_main/src/infra/: console.rs  env.rs  executor.rs  forge_infra.rs  fs_create_dirs.rs  fs_meta.rs  fs_read.rs  fs_read_dir.rs  fs_remove.rs  fs_write.rs  http.rs  inquire.rs  kv_storage.rs  mcp_client.rs  mcp_server.rs  mod.rs  walker.rs
crates/forge_main/src/json_repair/: parser.rs  schema_coercion.rs
crates/forge_main/src/markdown_stream/: list.rs  mod.rs  table.rs
crates/forge_main/src/repo/: agent.rs  agent_definition.rs  context_engine.rs  forge_repo.rs  fs_snap.rs  fuzzy_search.rs  mod.rs  skill.rs  validation.rs
crates/forge_main/src/select/: confirm.rs  input.rs  multi.rs  select.rs  widget.rs
crates/forge_main/src/services/: agent_registry.rs  app_config.rs  attachment.rs  auth.rs  command.rs  context_engine.rs  conversation.rs  discovery.rs  fd.rs  fd_git.rs  fd_walker.rs  forge_services.rs  instructions.rs  lib.rs  policy.rs  provider_auth.rs  provider_service.rs  sync.rs  template.rs
crates/forge_main/src/spinner/: mod.rs
crates/forge_main/tests/: ci.rs
(+314 files in other folders)
